--- a/1st.html
+++ b/1st.html
@@ -13,14 +13,43 @@
     <h2 id="nu"></h2>
 
     <!-- <p>4445</p> -->
-    <!-- <p>4445</p> -->
+    <h1 id="fi">zz</h1>
     <p id="san">4445</p>
     <label>enter</label>
-    <input id="in">
+    <input id="in" placeholder="ENTER HERE HO HO ....">
+
     <button id="but">call</button>
     <button id="ev">evaluate</button>
-    <!-- <label>445</label>
-    <label>445</label> -->
+
+    <hr>
+    <input type="checkbox" id="chb">
+    <label for="chb">checkme</label>
+    
+    <br>
+    <br>
+    <br>
+    <input type="radio" id="rb1" name="opt" >
+    <label for="rb1">option 1</label>
+    <br>
+    <input type="radio" id="rb2" name="opt">
+    <label for="rb2">option 2</label>
+    <br>
+    <input type="radio" id="rb3" name="opt">
+    <label for="rb3">option 3</label>
+    <br>
+    <input type="radio" id="rb4" name="opt">
+    <label for="rb4">option 4</label>
+    <br>
+    <br>
+    <br>
+    <button type="submit" id="sub">SUBMITING</button>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p id="chp"></p>
+    <p id="rbp"></p>
     <script src="index.js"></script>
 </body>
 </html>
