--- a/1st.html
+++ b/1st.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>LORD PRITHWISH</title>
     <link rel="icon" type="image/jpg" href="pic/letter_p_PNG121.png">
@@ -50,6 +51,8 @@
     <br>
     <p id="chp"></p>
     <p id="rbp"></p>
+    <h1 id="called"></h1>
+    <button type="button" id="callbut">calling</button>
     <script src="index.js"></script>
 </body>
 </html>
