--- a/page_2.html
+++ b/page_2.html
@@ -11,6 +11,8 @@
     <hr>
     <button onclick="timed()" >@ TIME</button>
     <button onclick="timer()" >@ RUN TIMER</button>
+
+    <span>'lol' 'hi' 'there' "amigo"</span>
     <script type="module" src="set@2.js"></script>
 </body>
 </html>
